WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198647
position:fixed inside overflow positioning nodes is jumpy
https://bugs.webkit.org/show_bug.cgi?id=198647
Summary
position:fixed inside overflow positioning nodes is jumpy
Antti Koivisto
Reported
2019-06-07 00:42:04 PDT
Fixed needs to take offsets from positioning nodes into account.
Attachments
patch
(21.98 KB, patch)
2019-06-07 01:07 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-07 00:44:13 PDT
<
rdar://problem/51514437
>
Antti Koivisto
Comment 2
2019-06-07 01:07:13 PDT
Created
attachment 371574
[details]
patch
EWS Watchlist
Comment 3
2019-06-07 01:09:59 PDT
Attachment 371574
[details]
did not pass style-queue: ERROR: Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h:58: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2019-06-07 07:17:55 PDT
Comment on
attachment 371574
[details]
patch Clearing flags on attachment: 371574 Committed
r246197
: <
https://trac.webkit.org/changeset/246197
>
WebKit Commit Bot
Comment 5
2019-06-07 07:17:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug