position:fixed inside overflow positioning nodes is jumpy https://bugs.webkit.org/show_bug.cgi?id=198647 <rdar://problem/51514437>

Reviewed by Frédéric Wang.

Source/WebCore:

Tests: scrollingcoordinator/ios/fixed-overflow-no-stacking-context-1.html
       scrollingcoordinator/ios/fixed-overflow-no-stacking-context-2.html
       scrollingcoordinator/ios/fixed-overflow-stacking-context-stationary.html

* page/scrolling/ScrollingTreeScrollingNode.h:
* page/scrolling/cocoa/ScrollingTreeFixedNode.mm:
(WebCore::ScrollingTreeFixedNode::applyLayerPositions):

Take deltas from positioning nodes into account.

* page/scrolling/cocoa/ScrollingTreePositionedNode.h:
* page/scrolling/cocoa/ScrollingTreePositionedNode.mm:
(WebCore::ScrollingTreePositionedNode::scrollDeltaSinceLastCommit const):

Rename since 'scrollOffset' has other meaning.

(WebCore::ScrollingTreePositionedNode::applyLayerPositions):
(WebCore::ScrollingTreePositionedNode::scrollOffsetSinceLastCommit const): Deleted.
* page/scrolling/cocoa/ScrollingTreeStickyNode.mm:
(WebCore::ScrollingTreeStickyNode::applyLayerPositions):

LayoutTests:

* scrollingcoordinator/ios/fixed-overflow-no-stacking-context-1-expected.html: Added.
* scrollingcoordinator/ios/fixed-overflow-no-stacking-context-1.html: Added.
* scrollingcoordinator/ios/fixed-overflow-no-stacking-context-2-expected.html: Added.
* scrollingcoordinator/ios/fixed-overflow-no-stacking-context-2.html: Added.
* scrollingcoordinator/ios/fixed-overflow-stacking-context-stationary-expected.html: Added.
* scrollingcoordinator/ios/fixed-overflow-stacking-context-stationary.html: Added.


Canonical link: https://commits.webkit.org/212645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246197 268f45cc-cd09-0410-ab3c-d52691b4dbfc